--- a/LoginSignupIdentity/Views/Home/Index.cshtml
+++ b/LoginSignupIdentity/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
         <img src="~/Images/uc.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">UC Purchase</h5>
-            <p class="card-text"><i class="bi bi-newspaper"></i>Purchase UC using UPI, Credit Card and Debit Card</p>
+            <p class="card-text"><i class="bi bi-newspaper"></i>UPI, Credit Card and Debit Card</p>
                 <a href="https://www.battlegroundsmobileindia.com/" class="btn btn-primary"><i class="bi bi-link-45deg"></i>Link</a>
         </div>
     </div>
